@@ -25,3 +25,11 @@ unsigned char our_data_end[0]
     __asm("_.innocent_pear.data.end")
     __attribute__((section(".data.zzzzzzzzzzzzzzzzzzzzzzzz"),
 	innocent_pear_HIDDEN));
+#ifdef innocent_pear_FIX_ELF_IFUNC
+extern const Elfxx_Rel rel_iplt_start[0]
+    __asm("_.innocent_pear.rel.iplt.start")
+    __attribute__((section(".rel.plt"))) = { };
+extern const Elfxx_Rela rela_iplt_start[0]
+    __asm("_.innocent_pear.rela.iplt.start")
+    __attribute__((section(".rela.plt"))) = { };
+#endif
